package sia;

public interface Fan {
}
