package sia;

public interface Light {
    public void on();
    public void off();
}
