@startuml
interface Light {}
class CeilingLight {
    + on(): void
    + off(): void
}
CeilingLight ..|> Light

class RemoteControl {
    - Command [] onCommands;
    - Command [] offCommands;
    - Command undoCommand;

    + setCommandToSlot(int slot, Command onCommand, Command offCommand): void
    + onButtonClicked(int slot): void
    + offButtonClicked(int slot): void
    + undoButtonClicked(int slot): void
}

interface Command {
    + execute(): void
    + undo(): Command
}
RemoteControl ..> Command
class LightOnCommand {
    - Light light
    + execute(): void
    + undo(): Command
}
LightOnCommand ..|> Command
LightOnCommand ..> Light
class LightOffCommand {
    - Light light
    + execute(): void
    + undo(): Command
}
LightOffCommand ..|> Command
LightOffCommand ..> Light
interface Fan {}
class CeilingFan {
    - int final HIGH
    - int final MEDIUM
    - int final LOW
    - int speed

    + high(): void
    + medium(): void
    + low(): void
    + off(): void
    + getSpeed(): int
}
CeilingFan ..|> Fan
class FanSpeedCommand {
    - Fan fan
    - int prevSpeed

    + execute(): void
    + undo(): Command
}

FanSpeedCommand ..|> Command
FanSpeedCommand ..> Fan
@enduml